--- a/functions/test-db/json2/scvo/templates/event-search-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search-digital.hbs
@@ -8,7 +8,7 @@
                     {{else}}
                     <h1 class="header-text">
                         <span class="header-text-banner">
-                            Training &amp; events
+                            Digital events
                         </span>
                     </h1>
                     {{/if}}
