--- a/functions/test-db/json2/humanrightsdeclaration/templates/privacy.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/privacy.hbs
@@ -1,7 +1,7 @@
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h2>Privacy &amp; Cookie policy</h2>
+            <h2>Privacy &amp; cookie policy</h2>
 
             <h4>1. INTRODUCTION</h4>
 
