--- a/functions/test-db/json2/humanrightsdeclaration/templates/terms.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/terms.hbs
@@ -1,8 +1,7 @@
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner title">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h2>Terms &amp; Conditions</h2>
-            <h3 class="page-title">Terms and Conditions</h3>
+            <h2>Terms &amp; conditions</h2>
 
             <p><strong>PLEASE READ THESE TERMS AND CONDITIONS CAREFULLY BEFORE USING THIS SITE</strong></p>
 
