--- a/functions/test-db/json2/scvo/partials/search-info.hbs
+++ b/functions/test-db/json2/scvo/partials/search-info.hbs
@@ -9,6 +9,7 @@
     No results, please try a different search query
 </div>
 {{/if}}
+{{#compare params.path "===" "search"}}
 <h3>Trending topics</h3>
 <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
@@ -32,4 +33,5 @@
         </div>
     </div>
 </div>
+{{/compare}}
 {{/if}}
