Event layout fixes

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1484,6 +1484,13 @@ figure {
         .mdc-layout-grid__cell--span-10-desktop {
             grid-column-end: span 9;
         }
+        .gist,
+        .digital-blogs {
+            padding-right: $spacing-unit/2;
+        }
+        .digital-events {
+            padding-left: $spacing-unit/2;
+        }
     }
     .gist.scvo-event {
         margin-bottom: 0;
