--- a/functions/test-db/json2/scvo/templates/page-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/page-digital.hbs
@@ -173,7 +173,7 @@
     <div class="container-fluid latest_content">
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="digital-blogs mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                     <h2>Latest digital blogs</h2>
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
@@ -188,7 +188,7 @@
                         <a class="mdc-button mdc-button--raised v-margin" href="/digital/blogs">Read more</a>
                     </p>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                <div class="digital-events mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                     {{#compare supplimentaryResponses.related_events.hits.total ">" 0}}
                     <h2>Upcoming digital events</h2>
                     <div class="mdc-layout-grid">
