--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -517,6 +517,7 @@ primary-dark: #251032
 .post,
 .blogs,
 .press-media,
+.policy-research.events,
 .policy-research {
     @include theme-colours('posts');
 }
@@ -543,6 +544,8 @@ primary-dark: #251032
 .page-related,
 .page-sidebar .static-sidebar,
 .page-sidebar.static-sidebar,
+.policy-research.events .event-content,
+.policy-research.events .event-sidebar,
 .posts-page .page-sidebar,
 .post-content,
 .library-content,
