--- a/functions/test-db/json2/scvo/templates/event-cjs.hbs
+++ b/functions/test-db/json2/scvo/templates/event-cjs.hbs
@@ -5,7 +5,9 @@
         {{#with primaryResponse.hits.hits.[0]._source}}
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
-            <li><a href="/events">Events</a></li>
+            <li><a href="/jobs">Jobs</a></li>
+            <li><a href="/jobs/community-jobs-scotland">Community Jobs Scotland</a></li>
+            <li><a href="/jobs/community-jobs-scotland/training-opportunities">Training opportunities</a></li>
             <li>{{{title}}}</li>
         </ul>
 
@@ -17,6 +19,9 @@
                 <strong>Please read our <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
             </p>
             {{else}}
+            <p>
+                <strong>Please read our <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
+            </p>
             {{/compare}}
         </div>
         {{/with}}
