--- a/functions/test-db/json2/scvo/templates/event-cjs-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/event-cjs-booking.hbs
@@ -21,15 +21,16 @@
         {{#with primaryResponse.hits.hits.[0]._source}}
             <ul class="breadcrumbs">
                 <li><a href="/">Home</a></li>
-                <li><a href="/digital">Digital</a></li>
-                <li><a href="/digital/events">Events</a></li>
-                <li><a href="/digital/events/{{slug}}">{{{title}}}</a></li>
+                <li><a href="/jobs">Jobs</a></li>
+                <li><a href="/jobs/community-jobs-scotland">Community Jobs Scotland</a></li>
+                <li><a href="/jobs/community-jobs-scotland/training-opportunities">Training opportunities</a></li>
+                <li><a href="/jobs/community-jobs-scotland/training-opportunities/{{slug}}">{{{title}}}</a></li>
                 <li>Booking</li>
             </ul>
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content event-content">
-                        <iframe src="http://www.surveygizmo.eu/s3/90064254/Event-Booking-Digital-Events" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
+                        [FORM TO BE ADDED]
 
                         {{#compare course_type "===" "Training Course"}}
                         <p>
