Improved CJS training layout

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1072,10 +1072,11 @@ figure {
                 }
             }
             #main-tab-bar {
-                .mdc-tab.mdc-tab--active .mdc-tab--label,
                 .mdc-tab:hover .mdc-tab--label {
                     border-bottom-color: rgba(255,255,255,0.9);
-                    // background: rgba(0,0,0,0.2);
+                }
+                .mdc-tab.mdc-tab--active .mdc-tab--label {
+                    border-bottom-color: rgba(255,255,255,0.6);
                 }
             }
             #upper-tab-bar {
@@ -1085,9 +1086,11 @@ figure {
                     min-width: auto;
                     font-weight: 600;
                 }
-                .mdc-tab.mdc-tab--active .mdc-tab--label,
-                .mdc-tab:hover .mdc-tab--label {
+                .mdc-tab.mdc-tab--active .mdc-tab--label {
                     border-bottom-color: rgba(255,255,255,0.9);
+                }
+                .mdc-tab:hover .mdc-tab--label {
+                    border-bottom-color: rgba(255,255,255,0.6);
                 }
             }
         }
