--- a/functions/test-db/json2/scvo/templates/event-cjs-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-cjs-search.hbs
@@ -25,7 +25,7 @@
             <li>Training opportunities</li>
         </ul>
 
-        <h2>Find digital events</h2>
+        <h2>CJS training - courses available</h2>
         <form [searchroute]="'event_search_digital'" data-auto-search="true">
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
@@ -34,24 +34,6 @@
                             <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" placeholder="Keywords" value="{{params.query.q}}">
                         </div>
                         <h3>Filter</h3>
-                        <div class="mdc-form-field">
-                            <select class="mdc-select" role="listbox" id="events-course_type" name="course_type">
-                                <option value="" {{#if params.query.course_type}}{{else}}selected{{/if}}>Select event type</option>
-                                {{#each supplimentaryResponses.types.aggregations.types.buckets}}
-                                <option value="{{key}}" {{#compare ../params.query.course_type "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/each}}
-                            </select>
-                        </div>
-                        <div class="mdc-form-field">
-                            <select class="mdc-select" role="listbox" id="events-month" name="month">
-                                <option value="" {{#if params.query.month}}{{else}}selected{{/if}}>Any month</option>
-                                {{#each supplimentaryResponses.types.aggregations.months.buckets}}
-                                {{#if key}}
-                                <option value="{{key}}" {{#compare ../params.query.month "===" key}}selected{{/compare}}>{{key}}</option>
-                                {{/if}}
-                                {{/each}}
-                            </select>
-                        </div>
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="events-locations" name="location">
                                 <option value="" {{#if params.query.location}}{{else}}selected{{/if}}>Any location</option>
@@ -62,23 +44,27 @@
                                 {{/each}}
                             </select>
                         </div>
-                        <div class="mdc-form-field">
-                            <div class="mdc-checkbox">
-                                <input type="checkbox" class="mdc-checkbox__native-control" id="events-free" name="free" {{#if params.query.free}}checked{{/if}} />
-                                <div class="mdc-checkbox__background">
-                                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
-                                        <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-                                    </svg>
-                                    <div class="mdc-checkbox__mixedmark"></div>
-                                </div>
-                            </div>
-                            <label for="events-free">Only free events</label>
-                        </div>
                         <button class="mdc-button mdc-button--raised" type="submit">
                             Search
                         </button>
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content event-content">
+                        <p>
+                            Training is crucial to the development of all CJS employees. We can pay for £200 worth of training whilst the individual is employed through CJS.
+                        </p>
+                        <p>
+                            This flexible training fund does not necessary need to be utilised for CJS job related training courses, it can be used by the individual for their personal development or to help enhance their future career goals.
+                        </p>
+                        <p>
+                            CJS employees should speak to their employer/supervisor to book a place on a course.
+                        </p>
+                        <p>
+                            Employers should login to the Salesforce portal and submit an individual training request. Please email any queries to the <a href="mailto:cjstraining@scvo.org.uk">CJS Training Team</a>.
+                        </p>
+                        <p>
+                            Below are some examples of courses which can be accessed to utilise CJS employees training fund and training provider website links.
+                        </p>
+
                         {{> search_info}}
 
                         {{#each primaryResponse.hits.hits}}
@@ -88,7 +74,7 @@
                         {{> pagination}}
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar event-sidebar">
-                        {{> sidebar_events}}
+                        {{> sidebar_cjs}}
                     </div>
                 </div>
             </div>
