--- a/functions/test-db/json2/scvo/templates/event-cjs.hbs
+++ b/functions/test-db/json2/scvo/templates/event-cjs.hbs
@@ -13,7 +13,7 @@
 
         {{{rendered.scvo_full}}}
 
-        <div class="event-content">
+        <!-- <div class="event-content">
             {{#compare course_type "===" "Training Course"}}
             <p>
                 <strong>Please read our <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
@@ -23,7 +23,7 @@
                 <strong>Please read our <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Policies-procedures-and-TCs.docx">policies, procedures and terms &amp; conditions document</a> before making your booking.</strong>
             </p>
             {{/compare}}
-        </div>
+        </div> -->
         {{/with}}
 
         <div class="mdc-layout-grid">
