--- a/functions/test-db/json2/scvo/templates/page-cjs.hbs
+++ b/functions/test-db/json2/scvo/templates/page-cjs.hbs
@@ -10,20 +10,8 @@
                     {{{rendered.full}}}
                     {{/with}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar static-sidebar">
-                    <h3>About Community Jobs Scotland</h3>
-                    <p>
-                        Creating jobs in Scotland's third sector for unemployed vulnerable young people.
-                    </p>
-                    <h3>
-                        Contact
-                    </h3>
-                    <p>
-                        <i class="fas fa-envelope-square"></i> <a href="mailto:communityjobsscotland@scvo.org.uk">communityjobsscotland@scvo.org.uk</a><br />
-                        <i class="fas fa-phone-square"></i> <a href="tel:+441415595026">0141 559 5026</a><br />
-                        <i class="fab fa-twitter-square"></i> <a href="https://twitter.com/_cjs_">Twitter</a><br />
-                        <i class="fab fa-facebook-square"></i> <a href="https://www.facebook.com/CommunityJobsScotland/">Facebook</a>
-                    </p>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
+                    {{> sidebar_cjs}}
                 </div>
                 {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
