--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1870,13 +1870,26 @@ h1.support-sector {
     }
     dt {
         font-weight: 600;
+        font-size: 1.15rem;
         clear: both;
         width: 30%;
     }
     dd {
         width: 70%;
-        margin: 0;
+        margin: 0 0 $spacing-unit;
+        .mdc-layout-grid__cell strong {
+            font-size: 1.15rem;
+        }
+        .mdc-layout-grid__inner:last-child {
+            margin-bottom: 0;
+        }
     }
+}
+.book-now .mdc-button {
+    margin: 0 auto;
+    width: 70%;
+    display: block;
+    margin-left: 30%;
 }
 
 .container-content {
