--- a/functions/test-db/json2/scvo/templates/event-policy-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-policy-search.hbs
@@ -24,7 +24,7 @@
             <li>Events</li>
         </ul>
 
-        <h2>Find digital events</h2>
+        <h2>Find policy events</h2>
         <form [searchroute]="'event_search_digital'" data-auto-search="true">
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
