--- a/functions/test-db/json2/scvo/templates/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/page-policy.hbs
@@ -40,10 +40,12 @@
 
                     <a href="/policy-research/research" class="v-margin">More research</a>
                 </div>
+            </div>
+            <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <div class="mdc-card">
                         <section class="mdc-card__primary">
-                            <h1 class="mdc-card__title mdc-card__title--large">Campaigns</h1>
+                            <h1 class="mdc-card__title mdc-card__title--large"><span class="fal fa-fw fa-briefcase fa-2x"> </span>Campaigns</h1>
                         </section>
                         <section class="mdc-card__supporting-text">Learn more about our campaigns.</section>
                         <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/projects-campaigns" href="/projects-campaigns">Find out more</a></section>
@@ -52,7 +54,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <div class="mdc-card">
                         <section class="mdc-card__primary">
-                            <h1 class="mdc-card__title mdc-card__title--large">Evidence Library</h1>
+                            <h1 class="mdc-card__title mdc-card__title--large"><span class="fal fa-fw fa-briefcase fa-2x"> </span>Evidence Library</h1>
                         </section>
                         <section class="mdc-card__supporting-text">A resource for anyone interested in learning about the third sector in Scotland.</section>
                         <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/policy-research/evidence-libr" href="/policy-research/evidence-library">Find out more</a></section>
@@ -61,7 +63,7 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     <div class="mdc-card">
                         <section class="mdc-card__primary">
-                            <h1 class="mdc-card__title mdc-card__title--large">Policy Committee</h1>
+                            <h1 class="mdc-card__title mdc-card__title--large"><span class="fal fa-fw fa-briefcase fa-2x"> </span>Policy Committee</h1>
                         </section>
                         <section class="mdc-card__supporting-text">Advising us on policies which reflect the best interests of the third sector in Scotland.</section>
                         <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/policy-research/policy-commit" href="/policy-research/policy-committee">Find out more</a></section>
