--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -253,6 +253,9 @@ primary-dark: #251032
     .mdc-theme--primary-bg {
         background-color: map-get($themeSelected, 'primary') !important;
     }
+    .support.support-policy .mdc-card__primary {
+        background-color: map-get($themePosts, 'primary') !important;
+    }
     .section-campaigns .mdc-card__media,
     .section-projects .mdc-card__media,
     .support.support-organisation .mdc-card__media {
@@ -405,10 +408,7 @@ primary-dark: #251032
             map-get($themeServices, 'primary-alpha'),
             map-get($themeServices, 'primary-alpha')
         ),
-        url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/Drake-Music-03.jpg');
-        // .mdc-layout-grid__cell h3 a:hover .fa {
-        //     background-color: map-get($themeServices, 'primary') !important;
-        // }
+        url('https://storage.googleapis.com/scvo-cms/23595/THEGATHERING-22.02.17_0475.jpg');
         a:hover .fa-fw {
             background-color: white !important;
             color: map-get($themeServices, 'primary') !important;
@@ -419,7 +419,7 @@ primary-dark: #251032
             map-get($themeDefault, 'primary-alpha'),
             map-get($themeDefault, 'primary-alpha')
         ),
-        url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/11/Dunaverty-Hall.jpg');
+        url('https://storage.googleapis.com/scvo-cms/23602/THEGATHERING-23.02.17_0303.jpg');
         .mdc-button {
             border-color: white !important;
             color: white !important;
@@ -428,6 +428,23 @@ primary-dark: #251032
             background-color: white !important;
             border-color: map-get($themeDefault, 'primary-dark') !important;
             color: map-get($themeDefault, 'primary') !important;
+        }
+    }
+    .policy-research .callout-image {
+        background-image: linear-gradient(
+            map-get($themeDefault, 'primary-alpha'),
+            map-get($themeDefault, 'primary-alpha')
+        ),
+        url('https://storage.googleapis.com/scvo-cms/23594/THEGATHERING-22.02.17_0028.jpg');
+        color: white;
+        .mdc-button {
+            border-color: white !important;
+            color: white !important;
+        }
+        .mdc-button:hover {
+            background-color: white !important;
+            border-color: map-get($themePosts, 'primary-dark') !important;
+            color: map-get($themePosts, 'primary') !important;
         }
     }
     .footer-image {
@@ -679,6 +696,13 @@ figure {
     float: right;
 }
 
+.cta-content.callout-image {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: auto;
+}
+
 .home {
     .search {
         margin-bottom: $spacing-unit*2;
@@ -761,10 +785,6 @@ figure {
         }
     }
     .cta-content.callout-image {
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center center;
-        height: auto;
         padding: $spacing-unit 0 $spacing-unit*3.25;
         h2, h3, a, .fa, .fal, .fab, .fas, .far {
             color: white;
@@ -1073,10 +1093,10 @@ figure {
             }
             #main-tab-bar {
                 .mdc-tab:hover .mdc-tab--label {
-                    border-bottom-color: rgba(255,255,255,0.9);
+                    border-bottom-color: rgba(255,255,255,0.6);
                 }
                 .mdc-tab.mdc-tab--active .mdc-tab--label {
-                    border-bottom-color: rgba(255,255,255,0.6);
+                    border-bottom-color: rgba(255,255,255,0.9);
                 }
             }
             #upper-tab-bar {
@@ -1086,11 +1106,11 @@ figure {
                     min-width: auto;
                     font-weight: 600;
                 }
-                .mdc-tab.mdc-tab--active .mdc-tab--label {
-                    border-bottom-color: rgba(255,255,255,0.9);
-                }
                 .mdc-tab:hover .mdc-tab--label {
                     border-bottom-color: rgba(255,255,255,0.6);
+                }
+                .mdc-tab.mdc-tab--active .mdc-tab--label {
+                    border-bottom-color: rgba(255,255,255,0.9);
                 }
             }
         }
@@ -1274,7 +1294,7 @@ figure {
             rgba(173, 20, 87, 0.89),
             rgba(173, 20, 87, 0.89)
         ),
-        url('https://storage.googleapis.com/scvo-cms/21981/hayweight-new-940x470.jpg');
+        url('https://storage.googleapis.com/scvo-cms/23601/THEGATHERING-23.02.17_0302.jpg');
     }
 }
 .footer-image.join-our-hub {
