--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -841,6 +841,17 @@ figure {
         }
     }
 }
+.policy-research {
+    .latest-content {
+        padding: $spacing-unit 0;
+    }
+    .policy-stats {
+        padding: $spacing-unit 0;
+        h2 {
+            margin-top: 0;
+        }
+    }
+}
 .home {
     .latest-content {
         h2 a,
