--- a/functions/test-db/json2/scvo/templates/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/page-policy.hbs
@@ -16,6 +16,9 @@
                 Testing,
             </p>
             <p>
+                Testing,
+            </p>
+            <p>
                 Testing
             </p>
         </div>
