--- a/functions/test-db/json2/scvo/partials/footer-services.hbs
+++ b/functions/test-db/json2/scvo/partials/footer-services.hbs
@@ -1,4 +1,4 @@
-<div class="footer-image cta-content join-our-hub">
+<div class="footer-image join-our-hub">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
