--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -10,7 +10,7 @@
                 </h1>
                 <p class="header-extra">
                     Championing Scotland's vibrant charities,<br />
-                    voluntary organisations &amp; Social Enterprises
+                    voluntary organisations &amp; social enterprises
                 </p>
                 <p>
                     <a href="/about" class="mdc-button">Find out more</a>
