Updated 360giving lat+lng format

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -209,9 +209,9 @@ primary-dark: #251032
     }
     .digital-participation.callout {
         background-image: linear-gradient(
-            180deg,
-            map-get($themeDigital, 'secondary-light') 5%,
-            map-get($themeDigital, 'secondary-dark') 95%
+        180deg,
+        map-get($themeDigital, 'secondary-light') 5%,
+        map-get($themeDigital, 'secondary-dark') 95%
         );
         p,
         h2,
@@ -300,11 +300,11 @@ primary-dark: #251032
     }
     .mdc-theme--primary-dark-bg.toolbar-nav {
         background-image: linear-gradient(
-            90deg,
-            map-get($themeSelected, 'primary-dark'),
-            map-get($themeSelected, 'primary-dark') 60%,
-            map-get($themeSelected, 'primary') 120%,
-            map-get($themeSelected, 'primary')
+        90deg,
+        map-get($themeSelected, 'primary-dark'),
+        map-get($themeSelected, 'primary-dark') 60%,
+        map-get($themeSelected, 'primary') 120%,
+        map-get($themeSelected, 'primary')
         );
     }
     .pagination li:hover,
@@ -340,21 +340,21 @@ primary-dark: #251032
 
     .splash-overlay {
         background-image: linear-gradient(
-            66deg,
-            map-get($themeSelected, 'primary-alpha'),
-            map-get($themeSelected, 'primary-alpha') 47%,
-            transparent 47.08%,
-            transparent
+        66deg,
+        map-get($themeSelected, 'primary-alpha'),
+        map-get($themeSelected, 'primary-alpha') 47%,
+        transparent 47.08%,
+        transparent
         );
     }
     @media screen and (max-width: 1140px) {
         .splash-overlay {
             background-image: linear-gradient(
-                66deg,
-                map-get($themeSelected, 'primary-alpha'),
-                map-get($themeSelected, 'primary-alpha') 52%,
-                transparent 52.08%,
-                transparent
+            66deg,
+            map-get($themeSelected, 'primary-alpha'),
+            map-get($themeSelected, 'primary-alpha') 52%,
+            transparent 52.08%,
+            transparent
             );
         }
         .splash-image .header-caption {
@@ -364,11 +364,11 @@ primary-dark: #251032
     @media screen and (max-width: 991px) {
         .splash-overlay {
             background-image: linear-gradient(
-                66deg,
-                map-get($themeSelected, 'primary-alpha'),
-                map-get($themeSelected, 'primary-alpha') 57%,
-                transparent 57.08%,
-                transparent
+            66deg,
+            map-get($themeSelected, 'primary-alpha'),
+            map-get($themeSelected, 'primary-alpha') 57%,
+            transparent 57.08%,
+            transparent
             );
         }
         .splash-image .header-caption {
@@ -378,11 +378,11 @@ primary-dark: #251032
     @media screen and (max-width: 839px) {
         .splash-overlay {
             background-image: linear-gradient(
-                66deg,
-                map-get($themeSelected, 'primary-alpha'),
-                map-get($themeSelected, 'primary-alpha') 67%,
-                transparent 67.08%,
-                transparent
+            66deg,
+            map-get($themeSelected, 'primary-alpha'),
+            map-get($themeSelected, 'primary-alpha') 67%,
+            transparent 67.08%,
+            transparent
             );
         }
         .splash-image .header-caption {
@@ -392,16 +392,16 @@ primary-dark: #251032
     @media screen and (max-width: 450px) {
         .splash-overlay {
             background-image: linear-gradient(
-                66deg,
-                map-get($themeSelected, 'primary-alpha'),
-                map-get($themeSelected, 'primary-alpha')
+            66deg,
+            map-get($themeSelected, 'primary-alpha'),
+            map-get($themeSelected, 'primary-alpha')
             );
         }
     }
     .home .cta-content.callout-image {
         background-image: linear-gradient(
-            map-get($themeServices, 'primary-alpha'),
-            map-get($themeServices, 'primary-alpha')
+        map-get($themeServices, 'primary-alpha'),
+        map-get($themeServices, 'primary-alpha')
         ),
         url('https://storage.googleapis.com/scvo-cms/23595/THEGATHERING-22.02.17_0475.jpg');
         a:hover .fa-fw {
@@ -411,8 +411,8 @@ primary-dark: #251032
     }
     .digital .callout-image {
         background-image: linear-gradient(
-            map-get($themeDefault, 'primary-alpha'),
-            map-get($themeDefault, 'primary-alpha')
+        map-get($themeDefault, 'primary-alpha'),
+        map-get($themeDefault, 'primary-alpha')
         ),
         url('https://storage.googleapis.com/scvo-cms/23602/THEGATHERING-23.02.17_0303.jpg');
         .mdc-button {
@@ -427,8 +427,8 @@ primary-dark: #251032
     }
     .policy-research .callout-image {
         background-image: linear-gradient(
-            map-get($themeDefault, 'primary-alpha'),
-            map-get($themeDefault, 'primary-alpha')
+        map-get($themeDefault, 'primary-alpha'),
+        map-get($themeDefault, 'primary-alpha')
         ),
         url('https://storage.googleapis.com/scvo-cms/23594/THEGATHERING-22.02.17_0028.jpg');
         color: white;
@@ -458,11 +458,11 @@ primary-dark: #251032
     footer {
         color: white;
         background-image: linear-gradient(
-            160deg,
-            map-get($themeFooter, 'primary'),
-            map-get($themeFooter, 'primary') 60%,
-            map-get($themeFooter, 'primary-dark') 80%,
-            map-get($themeFooter, 'primary-dark')
+        160deg,
+        map-get($themeFooter, 'primary'),
+        map-get($themeFooter, 'primary') 60%,
+        map-get($themeFooter, 'primary-dark') 80%,
+        map-get($themeFooter, 'primary-dark')
         );
         // background-color: map-get($themeFooter, 'primary');
         border-top: 0.6rem solid map-get($themeFooter, 'primary-light');
@@ -634,16 +634,6 @@ img.responsive {
 }
 .mdc-temporary-drawer .mdc-list-item {
     font-weight: 600;
-}
-.mdc-temporary-drawer__drawer {
-  display: -webkit-box;
-  -webkit-transition: all .195s ease;
-  -webkit-transform: translateX(-400px);
-}
-.mdc-temporary-drawer--open  {
-  .mdc-temporary-drawer__drawer {
-    -webkit-transform: none;
-  }
 }
 .mdc-card__title,
 .mdc-typography--headline,
@@ -1197,6 +1187,17 @@ figure {
     }
 }
 
+.mdc-temporary-drawer__drawer {
+    display: -webkit-box !important;
+    -webkit-transition: all .195s ease !important;
+    -webkit-transform: translateX(400px) !important;
+}
+.mdc-temporary-drawer--open {
+    .mdc-temporary-drawer__drawer {
+        -webkit-transform: none !important;
+    }
+}
+
 .headroom {
     will-change: transform;
     transition: transform 200ms linear;
@@ -1292,8 +1293,8 @@ figure {
     background-repeat: no-repeat;
     background-position: center center;
     background-image: linear-gradient(
-        rgba(173, 20, 87, 0.89),
-        rgba(173, 20, 87, 0.89)
+    rgba(173, 20, 87, 0.89),
+    rgba(173, 20, 87, 0.89)
     ),
     url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/Drake-Music-06.jpg');
     text-align: center;
@@ -1307,16 +1308,16 @@ figure {
 .running-your-organisation {
     .footer-image {
         background-image: linear-gradient(
-            rgba(173, 20, 87, 0.89),
-            rgba(173, 20, 87, 0.89)
+        rgba(173, 20, 87, 0.89),
+        rgba(173, 20, 87, 0.89)
         ),
         url('https://storage.googleapis.com/scvo-cms/23601/THEGATHERING-23.02.17_0302.jpg');
     }
 }
 .footer-image.join-our-hub {
     background-image: linear-gradient(
-        rgba(173, 20, 87, 0.89),
-        rgba(173, 20, 87, 0.89)
+    rgba(173, 20, 87, 0.89),
+    rgba(173, 20, 87, 0.89)
     ),
     url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/edward-new-940x470.jpg');
 }
@@ -1470,7 +1471,7 @@ figure {
         max-height: $spacing-unit*6;
     }
 }
-.mdc-temporary-drawer,
+// .mdc-temporary-drawer,
 .about.staff-team .post-info-author,
 .digital.charter-fund.projects .page-info,
 .digital.cyber-resilience.projects .page-info,
@@ -2556,9 +2557,9 @@ footer {
 }
 
 @media screen and (max-width: 991px) {
-    .mdc-temporary-drawer {
-        display: block;
-    }
+    // .mdc-temporary-drawer {
+    //     display: block;
+    // }
     .mdc-toolbar {
         #upper-tab-bar,
         .mdc-toolbar__row.toolbar-nav {
