--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -79,7 +79,7 @@
             </header>
 
             <aside class="mdc-temporary-drawer" id="menu_drawer" dir="rtl">
-                <nav class="mdc-temporary-drawer__drawer">
+                <nav class="mdc-temporary-drawer__drawer" dir="ltr">
                     <header class="mdc-temporary-drawer__header">
                         <div class="mdc-temporary-drawer__header-content mdc-theme--primary-bg">
                             <img src="/assets/images/scvo-logo.png" />
