--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -167,7 +167,7 @@
                         Latest TFN news
                     </h2>
                     {{#each supplimentaryResponses.tfn_latest.hits.hits}}
-                    {{{_source.rendered.gist}}}
+                    {{{_source.rendered.scvo_gist}}}
                     {{/each}}
                     <h2>
                         <a href="http://thirdforcenews.org.uk">Read more on TFN</a>
