--- a/functions/test-db/json2/scvo/templates/posts/post.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post.hbs
@@ -53,7 +53,7 @@
                         <div class="mdc-layout-grid__inner">
                             {{#each supplimentaryResponses.tfn_related_posts.hits.hits}}
                             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                                {{{_source.rendered.gist}}}
+                                {{{_source.rendered.scvo_gist}}}
                             </div>
                             {{/each}}
                         </div>
