--- a/functions/test-db/json2/scvo/templates/pages/page-press.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-press.hbs
@@ -1,11 +1,11 @@
-<div class="page posts-page">
+<div class="page posts press">
     {{> header_splash}}
     <div class="container-fluid">
         {{#> handle_404}}
         {{> breadcrumbs_posts}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content post-content">
                     <ul class="supplimentary-list">
                         {{#each supplimentaryResponses.related_posts.hits.hits}}
                         {{{_source.rendered.list}}}
@@ -13,7 +13,7 @@
                     </ul>
                     {{> pagination}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
                     {{#with primaryResponse.hits.hits.[0]._source}}
                     {{{rendered.full}}}
                     {{/with}}
