--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -114,7 +114,7 @@
                     <div class="container-fluid">
                         <div class="mdc-layout-grid">
                             <div class="mdc-layout-grid__inner">
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop contact">
                                     <h3>Contact</h3>
                                     <ul class="fa-ul">
                                         <li>
@@ -139,7 +139,7 @@
                                         <li class="mdc-list-item"><a href="/services/membership">Become a member</a></li>
                                     </ul>
                                 </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop social">
                                     <h3>Social</h3>
                                     <ul class="fa-ul">
                                         <li>
@@ -164,7 +164,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop help">
                                     <h3>Help</h3>
                                     <ul class="mdc-list">
                                         {{#each menus.footer}}
@@ -172,7 +172,7 @@
                                         {{/each}}
                                     </ul>
                                 </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop about">
                                     <h3>About</h3>
                                     <p>
                                         The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises. <a href="/about">Find out more</a>
