--- a/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-policy.hbs
@@ -99,7 +99,7 @@
                     <div class="mdc-card">
                         <section class="mdc-card__primary">
                             <h1 class="mdc-card__title mdc-card__title--large">
-                                <a href="/policy-research/events"><span class="fal fa-fw fa-users fa-2x"> </span>Events</a>
+                                <a href="/policy-research/events"><span class="fal fa-fw fa-comments fa-2x"> </span>Events</a>
                             </h1>
                         </section>
                         <section class="mdc-card__supporting-text">
