--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -2341,6 +2341,10 @@ p:last-child {
     margin-top: $spacing-unit/2;
 }
 
+.page-content {
+    padding-bottom: $spacing-unit*1.5;
+}
+
 .page-content,
 .post-content {
     a[href^="http://"]::after,
