SCVO Jobs page linked to goodmoves data

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1477,6 +1477,7 @@ figure {
 }
 // .mdc-temporary-drawer,
 .about.staff-team .post-info-author,
+.about.work-with-us .page-info,
 .digital.charter-fund.projects .page-info,
 .digital.cyber-resilience.projects .page-info,
 .projects-campaigns.terrific-trustees.search .page-info,
