--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -718,15 +718,16 @@ figure {
                 line-height: $spacing-unit*3;
                 margin: 0;
                 padding: $spacing-unit $spacing-unit*3 $spacing-unit $spacing-unit;
-                font-size: 1.5rem;
+                font-size: 1.1rem;
             }
             .search-button-large {
                 padding: 1px 0 0;
                 position: absolute;
-                top: $spacing-unit/2;
-                right: $spacing-unit/2;
+                top: $spacing-unit*(3/4);
+                right: $spacing-unit*(3/4);
                 .fa-search {
                     color: #333;
+                    font-size: 1.5rem;
                 }
             }
         }
