--- a/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-amp.hbs
@@ -1,5 +1,5 @@
 {{#> amp_layout}}
-<div class="">
+<div class="post amp">
     {{> breadcrumbs_posts}}
 
     {{#with primaryResponse.hits.hits.[0]._source}}
