--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1937,6 +1937,10 @@ h1.support-sector {
     display: block;
     margin-left: 30%;
 }
+.booking {
+    font-size: 2rem;
+    font-weight: 600;
+}
 
 .container-content {
     ul {
